--- a/Sprint 4/package.json
+++ b/Sprint 4/package.json
@@ -36,6 +36,7 @@
     "trailingComma": "none"
   },
   "dependencies": {
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "npm-watch": "^0.11.0"
   }
 }
